crates/aranya-policy-compiler/tests/data/type_errors/bad_builtin_arg_invalid_type.fail.policy
function f(x int) bool {
    return saturating_add(x, "foo")
}
